warning user with flexible time for flexible task duration, explain auto schedule