@@ -7,8 +7,12 @@ import nhk.user.UserRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.Duration;
 import java.time.LocalDate;
 import java.time.LocalTime;
+import java.time.ZoneId;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
@@ -25,6 +29,7 @@ public class AvailableTimeServiceImpl implements AvailableTimeService {
     private final DailyCheckinRepository checkinRepo;
     private final FixedEventService eventService;
     private final DailyPlanRepository dailyPlanRepository;
+    private final CheckinStreakService streakService;
 
     @Override
     @Transactional(readOnly = true)
@@ -32,249 +37,216 @@ public class AvailableTimeServiceImpl implements AvailableTimeService {
         User user = userRepo.findById(userId)
                 .orElseThrow(() -> new UserNotFoundException("User not found with ID: " + userId));
 
-        java.time.ZoneId zoneId = java.time.ZoneId.of(
-                user.getTimezone() != null && !user.getTimezone().isBlank() ? user.getTimezone() : "UTC"
-        );
+        ZoneId zoneId = resolveZoneId(user);
+        int streak = streakService.getStreak(userId, zoneId); // compute once, reuse in every early-return
 
         if (user.getWakeTime() == null || user.getSleepTime() == null) {
-            return AvailableTimeResponse.builder()
-                    .availableMinutes(0).blockedMinutes(0)
-                    .bufferPct(user.getBufferPct()).workingWindowMinutes(0)
-                    .checkedIn(false).checkinTime(null)
-                    .streak(getStreakForUser(userId, zoneId))
-                    .isPlanConfirmed(false)
-                    .decayedTaskTitles(java.util.Collections.emptyList())
-                    .build();
+            return zeroResponse(user, false, null, false, streak);
         }
 
-        // Query check-in for this user and date
         Optional<DailyCheckin> checkinOpt = checkinRepo.findByUserIdAndCheckinDate(userId, date);
         boolean checkedIn = checkinOpt.isPresent();
         LocalTime checkinTime = checkedIn ? checkinOpt.get().getCheckinTime() : null;
 
         LocalDate today = LocalDate.now(zoneId);
-        LocalTime now = LocalTime.now(zoneId);
+        LocalTime now = resolveNow(zoneId, date, userId);
 
-        Optional<DailyPlan> planOpt = dailyPlanRepository.findByUserIdAndPlanDate(userId, date);
-        boolean isPlanConfirmed = planOpt.isPresent() && planOpt.get().getIsConfirmed();
-        if (isPlanConfirmed && planOpt.get().getConfirmedAt() != null) {
-            now = planOpt.get().getConfirmedAt().atZoneSameInstant(zoneId).toLocalTime();
-        }
+        boolean isPlanConfirmed = isPlanConfirmed(date, userId, zoneId);
+        boolean isCrossMidnight = isCrossMidnight(user);
 
-        // Check if sleepTime crosses midnight relative to wakeTime
-        boolean isCrossMidnight = !user.getSleepTime().equals(LocalTime.MIDNIGHT) && user.getSleepTime().isBefore(user.getWakeTime());
-
-        // Determine windowStart based on today vs past vs future
-        LocalTime windowStart;
         if (date.isBefore(today)) {
-            windowStart = user.getSleepTime(); // past days have 0 available time
-        } else if (date.equals(today)) {
-            // Check if day is already over today
-            boolean isOver;
-            if (user.getSleepTime().equals(LocalTime.MIDNIGHT)) {
-                isOver = false;
-            } else if (!isCrossMidnight) {
-                isOver = now.isAfter(user.getSleepTime());
-            } else {
-                isOver = now.isAfter(user.getSleepTime()) && now.isBefore(user.getWakeTime());
-            }
-            if (isOver) {
-                return AvailableTimeResponse.builder()
-                        .availableMinutes(0).blockedMinutes(0)
-                        .bufferPct(user.getBufferPct()).workingWindowMinutes(0)
-                        .checkedIn(checkedIn)
-                        .checkinTime(checkinTime != null ? checkinTime.toString().substring(0, 5) : null)
-                        .streak(getStreakForUser(userId, zoneId))
-                        .isPlanConfirmed(isPlanConfirmed)
-                        .decayedTaskTitles(java.util.Collections.emptyList())
-                        .build();
-            }
-            
-            // Apply 15-minute buffer starting from wakeTime (if before wakeTime) or now (if inside)
-            if (now.isBefore(user.getWakeTime())) {
-                windowStart = user.getWakeTime().plusMinutes(15);
-            } else {
-                windowStart = now.plusMinutes(15);
-            }
-        } else {
-            // Tomorrow / Future starts from Giờ thức dậy + 15m
-            windowStart = user.getWakeTime().plusMinutes(15);
+            return zeroResponse(user, checkedIn, checkinTime, isPlanConfirmed, streak);
         }
-        LocalTime windowEnd = user.getSleepTime();
 
-        int workingWindow;
-        if (windowEnd.equals(LocalTime.MIDNIGHT)) {
-            workingWindow = 1440 - (windowStart.toSecondOfDay() / 60);
-        } else {
-            workingWindow = (int) java.time.Duration.between(windowStart, windowEnd).toMinutes();
-            if (workingWindow < 0) {
-                if (isCrossMidnight) {
-                    workingWindow += 1440;
-                } else {
-                    workingWindow = 0;
-                }
-            }
+        if (date.equals(today) && isDayOver(now, user.getSleepTime(), user.getWakeTime(), isCrossMidnight)) {
+            return zeroResponse(user, checkedIn, checkinTime, isPlanConfirmed, streak);
         }
+
+        LocalTime windowStart = resolveWindowStart(date, today, now, user.getWakeTime());
+        LocalTime windowEnd = user.getSleepTime();
+        int workingWindow = computeWorkingWindow(windowStart, windowEnd, isCrossMidnight);
 
         if (workingWindow <= 0) {
-            return AvailableTimeResponse.builder()
-                    .availableMinutes(0).blockedMinutes(0)
-                    .bufferPct(user.getBufferPct()).workingWindowMinutes(0)
-                    .checkedIn(checkedIn)
-                    .checkinTime(checkinTime != null ? checkinTime.toString().substring(0, 5) : null)
-                    .streak(getStreakForUser(userId, zoneId))
-                    .isPlanConfirmed(isPlanConfirmed)
-                    .decayedTaskTitles(java.util.Collections.emptyList())
-                    .build();
+            return zeroResponse(user, checkedIn, checkinTime, isPlanConfirmed, streak);
         }
 
-        // Get all events for this date using FixedEventService
         List<FixedEventResponse> occurrences = eventService.getEventsInRange(userId, date, date);
-
-        // Union-interval algorithm
         UnionResult unionResult = computeUnionBlockedMinutes(occurrences, windowStart, windowEnd);
-        int blockedMinutes = unionResult.totalBlockedMinutes;
 
-        int remainingMinutes = workingWindow - blockedMinutes;
         int bufferPct = user.getBufferPct();
-        int availableMinutes = (int) (remainingMinutes * (1.0 - bufferPct / 100.0));
-        availableMinutes = Math.max(0, availableMinutes);
+        int availableMinutes = Math.max(0,
+                (int) ((workingWindow - unionResult.totalBlockedMinutes) * (1.0 - bufferPct / 100.0)));
 
         return AvailableTimeResponse.builder()
                 .availableMinutes(availableMinutes)
-                .blockedMinutes(blockedMinutes)
+                .blockedMinutes(unionResult.totalBlockedMinutes)
                 .bufferPct(bufferPct)
                 .workingWindowMinutes(workingWindow)
                 .checkedIn(checkedIn)
-                .checkinTime(checkinTime != null ? checkinTime.toString().substring(0, 5) : null)
-                .streak(getStreakForUser(userId, zoneId))
+                .checkinTime(formatTime(checkinTime))
+                .streak(streak)
                 .blockedIntervals(unionResult.blockedIntervals)
                 .isPlanConfirmed(isPlanConfirmed)
-                .decayedTaskTitles(java.util.Collections.emptyList())
+                .decayedTaskTitles(Collections.emptyList())
                 .build();
     }
 
+    // ─── Context Resolution ───────────────────────────────────────────────────────
+
+    private ZoneId resolveZoneId(User user) {
+        String tz = user.getTimezone();
+        return ZoneId.of(tz != null && !tz.isBlank() ? tz : "UTC");
+    }
+
+    /**
+     * Returns effective "now": if the plan is already confirmed, freeze time at the moment of confirmation.
+     */
+    private LocalTime resolveNow(ZoneId zoneId, LocalDate date, UUID userId) {
+        return dailyPlanRepository.findByUserIdAndPlanDate(userId, date)
+                .filter(p -> Boolean.TRUE.equals(p.getIsConfirmed()) && p.getConfirmedAt() != null)
+                .map(p -> p.getConfirmedAt().atZoneSameInstant(zoneId).toLocalTime())
+                .orElseGet(() -> LocalTime.now(zoneId));
+    }
+
+    private boolean isPlanConfirmed(LocalDate date, UUID userId, ZoneId zoneId) {
+        return dailyPlanRepository.findByUserIdAndPlanDate(userId, date)
+                .map(p -> Boolean.TRUE.equals(p.getIsConfirmed()))
+                .orElse(false);
+    }
+
+    // ─── Window Calculation ───────────────────────────────────────────────────────
+
+    private boolean isCrossMidnight(User user) {
+        LocalTime sleep = user.getSleepTime();
+        return !sleep.equals(LocalTime.MIDNIGHT) && sleep.isBefore(user.getWakeTime());
+    }
+
+    private boolean isDayOver(LocalTime now, LocalTime sleepTime, LocalTime wakeTime, boolean isCrossMidnight) {
+        if (sleepTime.equals(LocalTime.MIDNIGHT)) return false;
+        if (!isCrossMidnight) return now.isAfter(sleepTime);
+        return now.isAfter(sleepTime) && now.isBefore(wakeTime);
+    }
+
+    private LocalTime resolveWindowStart(LocalDate date, LocalDate today, LocalTime now, LocalTime wakeTime) {
+        if (!date.equals(today)) return wakeTime; // future date: always start from wake time
+        return now.isBefore(wakeTime) ? wakeTime : now;
+    }
+
+    private int computeWorkingWindow(LocalTime windowStart, LocalTime windowEnd, boolean isCrossMidnight) {
+        if (windowEnd.equals(LocalTime.MIDNIGHT)) {
+            return 1440 - (windowStart.toSecondOfDay() / 60);
+        }
+        int minutes = (int) Duration.between(windowStart, windowEnd).toMinutes();
+        if (minutes < 0) return isCrossMidnight ? minutes + 1440 : 0;
+        return minutes;
+    }
+
+    // ─── Union-Interval Algorithm ─────────────────────────────────────────────────
+
     private UnionResult computeUnionBlockedMinutes(List<FixedEventResponse> occurrences,
                                                    LocalTime windowStart, LocalTime windowEnd) {
-        List<FixedEventResponse> busyOccurrences = occurrences.stream()
+        List<FixedEventResponse> busyEvents = occurrences.stream()
                 .filter(e -> !"FREE".equalsIgnoreCase(e.availabilityStatus()))
                 .toList();
 
-        if (busyOccurrences.isEmpty()) {
-            return new UnionResult(0, java.util.Collections.emptyList());
-        }
+        if (busyEvents.isEmpty()) return UnionResult.empty();
 
-        int windowStartMin = windowStart.toSecondOfDay() / 60;
-        int windowEndMin   = windowEnd.toSecondOfDay() / 60;
-
+        int windowStartMin  = toMinutes(windowStart);
+        int windowEndMin    = toMinutes(windowEnd);
         boolean crossesMidnight = windowEnd.isBefore(windowStart);
 
-        boolean hasAllDay = busyOccurrences.stream().anyMatch(e -> Boolean.TRUE.equals(e.isAllDay()));
-        if (hasAllDay) {
-            int totalWindow = !crossesMidnight
-                    ? (windowEndMin - windowStartMin)
-                    : (1440 - windowStartMin + windowEndMin);
-            totalWindow = Math.max(0, totalWindow);
-            return new UnionResult(totalWindow, List.of(
-                    new AvailableTimeResponse.TimeInterval(minutesToHHMM(windowStartMin), minutesToHHMM(windowEndMin))
-            ));
+        if (busyEvents.stream().anyMatch(e -> Boolean.TRUE.equals(e.isAllDay()))) {
+            return allDayBlockedResult(windowStartMin, windowEndMin, crossesMidnight);
         }
 
-        List<int[]> intervals;
-        if (!crossesMidnight) {
-            intervals = busyOccurrences.stream()
-                    .map(e -> new int[]{
-                            Math.max(e.startTime().toSecondOfDay() / 60, windowStartMin),
-                            Math.min(e.endTime().toSecondOfDay() / 60,   windowEndMin)
-                    })
-                    .filter(iv -> iv[1] > iv[0])   // discard events entirely outside window
-                    .sorted(Comparator.comparingInt(iv -> iv[0]))
-                    .collect(Collectors.toList());
-        } else {
-            int endOfTodayMin = 24 * 60; // 1440 minutes
-            intervals = busyOccurrences.stream()
-                    .map(e -> new int[]{
-                            Math.max(e.startTime().toSecondOfDay() / 60, windowStartMin),
-                            Math.min(e.endTime().toSecondOfDay() / 60,   endOfTodayMin)
-                    })
-                    .filter(iv -> iv[1] > iv[0])   // discard events entirely outside window
-                    .sorted(Comparator.comparingInt(iv -> iv[0]))
-                    .collect(Collectors.toList());
-        }
+        int effectiveEnd = crossesMidnight ? 1440 : windowEndMin;
+        List<Interval> intervals = busyEvents.stream()
+                .map(e -> new Interval(
+                        Math.max(toMinutes(e.startTime()), windowStartMin),
+                        Math.min(toMinutes(e.endTime()), effectiveEnd)
+                ))
+                .filter(Interval::isValid)
+                .sorted(Comparator.comparingInt(Interval::start))
+                .collect(Collectors.toList());
 
-        if (intervals.isEmpty()) {
-            return new UnionResult(0, java.util.Collections.emptyList());
-        }
+        if (intervals.isEmpty()) return UnionResult.empty();
 
-        List<AvailableTimeResponse.TimeInterval> blockedIntervals = new java.util.ArrayList<>();
+        return mergeIntervals(intervals);
+    }
+
+    private UnionResult allDayBlockedResult(int windowStartMin, int windowEndMin, boolean crossesMidnight) {
+        int total = crossesMidnight
+                ? (1440 - windowStartMin + windowEndMin)
+                : (windowEndMin - windowStartMin);
+        return new UnionResult(Math.max(0, total), List.of(
+                new AvailableTimeResponse.TimeInterval(minutesToHHMM(windowStartMin), minutesToHHMM(windowEndMin))
+        ));
+    }
+
+    private UnionResult mergeIntervals(List<Interval> intervals) {
+        List<AvailableTimeResponse.TimeInterval> blockedIntervals = new ArrayList<>();
         int totalBlocked = 0;
-        int[] current = intervals.get(0);
+        Interval current = intervals.getFirst();
 
         for (int i = 1; i < intervals.size(); i++) {
-            int[] next = intervals.get(i);
-            if (next[0] <= current[1]) {
-                // Overlapping — extend current interval
-                current[1] = Math.max(current[1], next[1]);
+            Interval next = intervals.get(i);
+            if (next.overlaps(current)) {
+                current = current.extendTo(next);
             } else {
-                totalBlocked += current[1] - current[0];
-                blockedIntervals.add(new AvailableTimeResponse.TimeInterval(minutesToHHMM(current[0]), minutesToHHMM(current[1])));
+                totalBlocked += current.duration();
+                blockedIntervals.add(current.toTimeInterval());
                 current = next;
             }
         }
-        totalBlocked += current[1] - current[0];
-        blockedIntervals.add(new AvailableTimeResponse.TimeInterval(minutesToHHMM(current[0]), minutesToHHMM(current[1])));
+        totalBlocked += current.duration();
+        blockedIntervals.add(current.toTimeInterval());
 
         return new UnionResult(totalBlocked, blockedIntervals);
     }
 
-    private String minutesToHHMM(int minutes) {
-        int h = (minutes / 60) % 24;
-        int m = minutes % 60;
-        return String.format("%02d:%02d", h, m);
+    // ─── Utilities ────────────────────────────────────────────────────────────────
+
+    private int toMinutes(LocalTime time) {
+        return time.toSecondOfDay() / 60;
     }
 
-    private int getStreakForUser(UUID userId, java.time.ZoneId zoneId) {
-        LocalDate today = LocalDate.now(zoneId);
-        List<DailyCheckin> checkins = checkinRepo.findByUserIdOrderByCheckinDateDesc(userId);
-        if (checkins.isEmpty()) {
-            return 0;
+    private String minutesToHHMM(int minutes) {
+        return String.format("%02d:%02d", (minutes / 60) % 24, minutes % 60);
+    }
+
+    private String formatTime(LocalTime time) {
+        return time != null ? time.toString().substring(0, 5) : null;
+    }
+
+    private AvailableTimeResponse zeroResponse(User user, boolean checkedIn, LocalTime checkinTime,
+                                               boolean isPlanConfirmed, int streak) {
+        return AvailableTimeResponse.builder()
+                .availableMinutes(0).blockedMinutes(0)
+                .bufferPct(user.getBufferPct()).workingWindowMinutes(0)
+                .checkedIn(checkedIn).checkinTime(formatTime(checkinTime))
+                .streak(streak)
+                .isPlanConfirmed(isPlanConfirmed)
+                .decayedTaskTitles(Collections.emptyList())
+                .build();
+    }
+
+    // ─── Inner Types ──────────────────────────────────────────────────────────────
+
+    private record Interval(int start, int end) {
+        boolean isValid()           { return end > start; }
+        boolean overlaps(Interval o){ return start <= o.end; }
+        Interval extendTo(Interval o){ return new Interval(start, Math.max(end, o.end)); }
+        int duration()              { return end - start; }
+
+        AvailableTimeResponse.TimeInterval toTimeInterval() {
+            return new AvailableTimeResponse.TimeInterval(
+                    String.format("%02d:%02d", (start / 60) % 24, start % 60),
+                    String.format("%02d:%02d", (end   / 60) % 24, end   % 60)
+            );
         }
-
-        int streak = 0;
-        LocalDate current = today;
-        boolean foundToday = false;
-        boolean foundYesterday = false;
-
-        for (DailyCheckin dc : checkins) {
-            LocalDate d = dc.getCheckinDate();
-            if (d.equals(today)) {
-                foundToday = true;
-            } else if (d.equals(today.minusDays(1))) {
-                foundYesterday = true;
-            }
-        }
-
-        if (foundToday) {
-            current = today;
-        } else if (foundYesterday) {
-            current = today.minusDays(1);
-        } else {
-            return 0;
-        }
-
-        for (DailyCheckin dc : checkins) {
-            LocalDate d = dc.getCheckinDate();
-            if (d.equals(current)) {
-                streak++;
-                current = current.minusDays(1);
-            } else if (d.isBefore(current)) {
-                break;
-            }
-        }
-
-        return streak;
     }
 
     private record UnionResult(int totalBlockedMinutes, List<AvailableTimeResponse.TimeInterval> blockedIntervals) {
+        static UnionResult empty() { return new UnionResult(0, Collections.emptyList()); }
     }
 }
